[gd_scene load_steps=9 format=3 uid="uid://p4i07p6jolpe"]

[ext_resource type="Script" uid="uid://cm541dmvulmrp" path="res://scripts/zoom_tile.gd" id="1_0i554"]
[ext_resource type="Texture2D" uid="uid://b7422o4o1axlo" path="res://img/InitialsCircle.svg" id="1_o4w37"]
[ext_resource type="Texture2D" uid="uid://bpbjuvw1smyv0" path="res://img/MuteIcon.png" id="2_0i554"]
[ext_resource type="Texture2D" uid="uid://i18sqv53e7rt" path="res://img/pfp/wakeup.jpg" id="2_6tcjm"]
[ext_resource type="Texture2D" uid="uid://7nervyi6q6mp" path="res://img/NoCameraIcon.png" id="3_6tcjm"]
[ext_resource type="Script" uid="uid://bqsc5oa6h3hve" path="res://button.gd" id="6_cd8v7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxvv4"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cd8v7"]
bg_color = Color(0.219608, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tcjm"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.515547, 0.923417, 0.14334, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ase4v"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxvv4"]
bg_color = Color(0, 0, 0, 0)

[node name="ZoomTile" type="Panel" groups=["zoom_tile"]]
offset_right = 312.0
offset_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0i554")
cameraOff = false
cameraImage = ExtResource("2_6tcjm")

[node name="Initial" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("1_o4w37")
expand_mode = 1

[node name="InitialsLabel" type="Label" parent="Initial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "PN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CameraFootage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="DeathProgressBar" type="ProgressBar" parent="CameraFootage"]
visible = false
custom_minimum_size = Vector2(0, 14.465)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.0
offset_right = 156.0
offset_bottom = 14.465
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_bxvv4")
value = 41.81
show_percentage = false

[node name="Stack" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="Stack"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_cd8v7")
text = "Person's Name"
horizontal_alignment = 1

[node name="MuteAndCamera" type="HBoxContainer" parent="Stack"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MuteIcon" type="TextureRect" parent="Stack/MuteAndCamera"]
custom_minimum_size = Vector2(22.255, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_0i554")
expand_mode = 5
stretch_mode = 4

[node name="CameraIcon" type="TextureRect" parent="Stack/MuteAndCamera"]
custom_minimum_size = Vector2(22.255, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_6tcjm")
expand_mode = 5
stretch_mode = 4

[node name="Talking" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6tcjm")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 312.0
offset_bottom = 176.0
theme_override_styles/hover = SubResource("StyleBoxFlat_ase4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_bxvv4")
button_mask = 2
script = ExtResource("6_cd8v7")
